--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 22:05:02 2018</p>
+         Last Run: Tue Nov 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>21</td>
                         <td>WNW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>18</td>
                         <td>WNW</td>
@@ -60,7 +60,7 @@
                         <td>3</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>WNW</td>
                         <td>10</td>
                      </tr>
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "75",
+                 "68",
+                 "74",
                  "76"
                ]
              },
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
+                 "14",
                  "12",
                  "10"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 22:05:02 2018</p>
+         Last Run: Tue Nov 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -263,7 +263,7 @@
                         <td>5</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>1</td>
                      </tr>
@@ -273,7 +273,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -285,11 +285,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
+                 "87",
                  "82",
-                 "74",
-                 "67"
+                 "73",
+                 "66"
                ]
              },
              {
@@ -418,7 +418,7 @@
                  "1",
                  "1",
                  "1",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 22:05:02 2018</p>
+         Last Run: Tue Nov 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -487,7 +487,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -499,7 +499,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
                  "68",
+                 "69",
                  "70"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 22:05:02 2018</p>
+         Last Run: Tue Nov 13 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -725,8 +725,8 @@
                         <td>72</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>52</td>
+                        <td>WSW</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -836,7 +836,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "71",
-                 "71",
+                 "72",
                  "72"
                ]
              },
@@ -848,7 +848,7 @@
                "data":[
                  "47",
                  "49",
-                 "52"
+                 "51"
                ]
              }
            ]
