--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 01:05:16 2018</p>
+         Last Run: Wed Nov 14 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>21</td>
                         <td>WNW</td>
-                        <td>17</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
+                 "69",
                  "76",
-                 "80"
+                 "78"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
+                 "19",
                  "12",
                  "6"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 01:05:16 2018</p>
+         Last Run: Wed Nov 14 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -264,14 +264,14 @@
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
+                        <td>-7</td>
+                        <td>-11</td>
                         <td>4</td>
                         <td>75</td>
                         <td>0</td>
@@ -285,7 +285,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -319,7 +319,7 @@
                "data":[
                  "-17",
                  "-14",
-                 "-12",
+                 "-11",
                  "-9"
                ]
              },
@@ -332,7 +332,7 @@
                "data":[
                  "-12",
                  "-10",
-                 "-8",
+                 "-7",
                  "-5"
                ]
              }
@@ -406,7 +406,7 @@
                  "89",
                  "82",
                  "75",
-                 "69"
+                 "68"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 01:05:16 2018</p>
+         Last Run: Wed Nov 14 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>51</td>
+                        <td>-2</td>
+                        <td>2</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>75</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>4</td>
+                        <td>Partly Cloudy</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>1</td>
-                        <td>47</td>
-                        <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>78</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>Partly Cloudy</td>
+                        <td>4</td>
                         <td>1</td>
-                        <td>46</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>48</td>
+                        <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>80</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "1",
-                 "2"
+                 "-2",
+                 "0",
+                 "1"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
-                 "4",
-                 "5"
+                 "1",
+                 "3",
+                 "4"
                ]
              }
            ]
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "47",
-                 "46"
+                 "55",
+                 "50",
+                 "48"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "78",
-                 "80"
+                 "59",
+                 "58",
+                 "57"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 01:05:16 2018</p>
+         Last Run: Wed Nov 14 02:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>72</td>
+                        <td>3</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>34</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>73</td>
+                        <td>3</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>34</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>75</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>37</td>
+                        <td>W</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "73",
+                 "74",
+                 "75",
                  "75"
                ]
              },
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
-                 "34",
-                 "37"
+                 "41",
+                 "43",
+                 "46"
                ]
              }
            ]
