--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 02:05:18 2018</p>
+         Last Run: Wed Nov 14 03:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>21</td>
                         <td>WNW</td>
-                        <td>19</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>18</td>
                         <td>NW</td>
-                        <td>12</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,9 +58,9 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>6</td>
                      </tr>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "76",
-                 "78"
+                 "74",
+                 "77"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "12",
+                 "15",
+                 "10",
                  "6"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 02:05:18 2018</p>
+         Last Run: Wed Nov 14 03:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>6</td>
-                        <td>89</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -264,16 +264,16 @@
                         <td>82</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-11</td>
+                        <td>-8</td>
+                        <td>-12</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -285,7 +285,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -317,9 +317,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
+                 "-18",
                  "-14",
-                 "-11",
+                 "-12",
                  "-9"
                ]
              },
@@ -330,9 +330,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
+                 "-13",
                  "-10",
-                 "-7",
+                 "-8",
                  "-5"
                ]
              }
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "89",
+                 "90",
                  "82",
-                 "75",
-                 "68"
+                 "74",
+                 "69"
                ]
              },
              {
@@ -415,7 +415,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "0",
                  "1"
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 02:05:18 2018</p>
+         Last Run: Wed Nov 14 03:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -486,7 +486,7 @@
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>59</td>
                      </tr>
                      <tr>
@@ -495,7 +495,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "50",
+                 "51",
                  "48"
                ]
              },
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 02:05:18 2018</p>
+         Last Run: Wed Nov 14 03:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,9 +698,9 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
                         <td>41</td>
                      </tr>
@@ -722,11 +722,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>46</td>
+                        <td>WSW</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
                  "75",
-                 "75"
+                 "75",
+                 "76"
                ]
              },
              {
@@ -848,7 +848,7 @@
                "data":[
                  "41",
                  "43",
-                 "46"
+                 "45"
                ]
              }
            ]
